--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,194 @@
       </div>
     </header>
     <main id="app" class="main">
+      <section class="min-h-screen relative">
+        <div class="flex flex-wrap">
+          <div class="w-full md:w-1/2 lg:w-2/3">
+            <div class="cover-image">
+              <img
+                class="w-full"
+                src="https://peoplevsoil.org/zh-HK/assets/files/shared/slideshow/GP0STPBDA_PressMedia.jpg"
+                alt=""
+              />
+            </div>
+            <div class="headline px-4 py-4">
+              <h1 class="text-4xl font-bold">Building a Visual Language</h1>
+              <p>Behind the scenes of our new design system</p>
+              <div class="my-8 border border-gray-200"></div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+                officiis magni autem laboriosam earum, adipisci itaque odio
+                ipsum nam, dignissimos repellat nesciunt sit cupiditate
+                molestiae odit ab, voluptate consequatur id.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                sit iste possimus dolorem illo, animi est enim, sint eos odio ab
+                eveniet id quasi deleniti ex excepturi deserunt voluptatibus
+                nemo.
+              </p>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2 lg:w-1/3">
+            <div class="sticky top-0 form-container self-center md:px-4">
+              <form class="form-body">
+                <div class="mb-8 form-row text-center">
+                  <h2 class="text-2xl font-bold">Make a change</h2>
+                  <p class="text-base">
+                    Stop the destruction of the Arctic
+                  </p>
+                </div>
+                <div class="form-row">
+                  <div class="flex flex-wrap">
+                    <div class="w-full mb-4 md:mb-0 md:w-1/2 md:pr-1">
+                      <label class="form-label">
+                        姓氏 Last Name
+                      </label>
+                      <input
+                        class="form-input"
+                        type="text"
+                        placeholder="姓氏 Last Name"
+                      />
+                    </div>
+                    <div class="w-full md:w-1/2 md:pl-2">
+                      <label class="form-label">
+                        名字 First Name
+                      </label>
+                      <input
+                        class="form-input"
+                        type="text"
+                        placeholder="名字 First Name"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="form-row">
+                  <label for="" class="form-label">
+                    電郵地址 Email Address
+                  </label>
+                  <input
+                    type="text"
+                    class="form-input"
+                    placeholder="電郵地址 Email Address"
+                  />
+                </div>
+                <div class="form-row">
+                  <label class="form-label">
+                    聯絡電話 Mobile Number
+                  </label>
+                  <div class="flex">
+                    <div class="w-1/5 pr-1">
+                      <div class="relative text-gray-500">
+                        <span
+                          class="pointer-events-none absolute pl-3 left-0 top-0 h-full items-center flex"
+                          >+</span
+                        >
+                        <input
+                          class="form-input pl-6"
+                          type="text"
+                          placeholder="852"
+                          value="852"
+                        />
+                        <div
+                          class="invisible pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
+                        >
+                          <svg
+                            class="fill-current h-4 w-4"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 20 20"
+                          >
+                            <path
+                              d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+                            />
+                          </svg>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="w-4/5 pl-1">
+                      <input
+                        class="form-input"
+                        type="text"
+                        placeholder="聯絡電話 Mobile Number"
+                      />
+                      <p class="form-warning invisible">
+                        Validation Message here.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-row">
+                  <label class="form-label">
+                    出生日期 Birthday
+                  </label>
+                  <div class="relative">
+                    <input
+                      class="form-input"
+                      type="text"
+                      placeholder="DD/MM/YYYY"
+                    />
+                    <div
+                      class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
+                    >
+                      <svg
+                        class="fill-current h-4 w-4"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 20 20"
+                      >
+                        <path
+                          d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+                        />
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-row">
+                  <label class="flex items-start">
+                    <input class="mr-2 leading-tight" checked type="checkbox" />
+                    <span class="form-label">
+                      <span class="block text-xs text-gray-600"
+                        >我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<u>個人資料政策</u>與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span
+                      >
+                    </span>
+                  </label>
+                </div>
+                <div class="form-row">
+                  <button class="form-button">
+                    Sign the petition
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <article class="mt-6">
+          <div class="content px-4 py-4">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+              ducimus quis, magnam quod deserunt assumenda animi tempore.
+              Adipisci, architecto repellendus, ea nemo blanditiis
+              necessitatibus incidunt, ab fugit a delectus saepe.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
+              dicta perspiciatis ea. Minus alias quasi modi soluta maiores enim
+              tempore iure hic, ea nobis atque omnis necessitatibus consectetur
+              eos illum!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
+              ducimus quis, magnam quod deserunt assumenda animi tempore.
+              Adipisci, architecto repellendus, ea nemo blanditiis
+              necessitatibus incidunt, ab fugit a delectus saepe.
+            </p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
+              dicta perspiciatis ea. Minus alias quasi modi soluta maiores enim
+              tempore iure hic, ea nobis atque omnis necessitatibus consectetur
+              eos illum!
+            </p>
+          </div>
+        </article>
+      </section>
       <section class="bg-gray-400 section-hero relative min-h-screen">
         <!-- Hero -->
         <div class="hero-overlay absolute-full invisible"></div>
@@ -36,7 +224,7 @@
         <!-- Hero -->
         <!-- Form -->
         <div
-          class="form-container container mx-auto md:inset-auto md:px-4 sm:max-w-sm lg:max-w-md"
+          class="form-container container mx-auto self-center min-h-screen py-20 md:inset-auto md:px-4 sm:max-w-sm lg:max-w-md"
         >
           <div class="form-header">
             <h2>
@@ -171,65 +359,57 @@
           </form>
         </div>
         <!-- Form -->
-        <!-- Navbar -->
-        <nav class="site-nav absolute w-full left-0 bottom-0 bg-gray-200">
-          <div class="container mx-auto"></div>
-        </nav>
       </section>
       <!-- Banner -->
-      <!-- Content -->
-      <section class="bg-white">
-        <!-- Article 1 -->
-        <article class="article">
-          <div
-            class="container mx-auto grid grid-flow-row grid-cols-1 lg:grid-cols-3 gap-4"
-          >
-            <div>
-              <h2 class="font-black text-5xl mb-2">守護大嶼</h2>
-              <h3 class="font-bold text-2xl">堅守香港海洋最後一道防線</h3>
-            </div>
-            <div>
-              <p class="text">
-                香港海洋孕育近6千種海洋生物，東大嶼水域生態豐富多樣，是國家重點保護野生動物白腹海雕的繁殖及棲息地，更錄得全球獨有的鮑氏雙足蜥，附近水域亦發現稀有的軟珊瑚海筆。
-              </p>
-              <p class="text">
-                政府強推「明日大嶼」，在如此敏感的生態區域大興土木，必然破壞珍貴的海洋生態；它亦是全球最昂貴的基建，造價至少6,240億元，不但可能為香港庫房帶來沉重負擔，亦無法有效解決香港的房屋問題。
-              </p>
-            </div>
-            <div>
-              <p class="text">
-                事實上，香港有比「明日大嶼」更明智的選項：我們最新的調查發現，發展棕地造價僅333億元，比填海便宜8成，卻可興建近14萬伙公營房屋。
-              </p>
-              <p class="text">
-                海洋住屋不對立，為了珍貴脆弱的海洋生態，及讓市民安居樂業，一起發聲，要求政府優先發展棕地，放棄不負責任的「明日大嶼」！
-              </p>
-            </div>
+      <!-- Article 1 -->
+      <article class="hidden article">
+        <div
+          class="container mx-auto grid grid-flow-row grid-cols-1 lg:grid-cols-3 gap-4"
+        >
+          <div>
+            <h2 class="font-black text-5xl mb-2">守護大嶼</h2>
+            <h3 class="font-bold text-2xl">堅守香港海洋最後一道防線</h3>
           </div>
-        </article>
-        <!-- Article 2 -->
-        <article class="article bg-gray-100 relative">
-          <div
-            class="container mx-auto grid grid-flow-row grid-cols-1 lg:grid-cols-3 gap-4"
-          >
-            <div class="lg:col-start-1 lg:col-end-3">
-              <img
-                class="w-full"
-                src="https://api.greenpeace.org.hk/2019/elm/img/DJI_0431.c6b2b22f.jpg"
-                alt=""
-              />
-            </div>
-            <div class="self-end relative lg:col-start-3 lg:col-end-4">
-              <p class="text">
-                填海選址鄰近海域具生態價值，或令海洋或陸地物種的棲息地永久喪失。
-              </p>
-              <p class="text">
-                我們與6個環保及關注團體發佈的生態調查發現，鄰近填海選址的周公島，具國家二級保護野生動物白腹海鵰的鳥巢，全球獨有的鮑氏雙足蜥，更在中部水域錄得一種稀有的軟珊瑚海筆，生態價值絕不應被刻意低估。
-              </p>
-            </div>
+          <div>
+            <p class="text">
+              香港海洋孕育近6千種海洋生物，東大嶼水域生態豐富多樣，是國家重點保護野生動物白腹海雕的繁殖及棲息地，更錄得全球獨有的鮑氏雙足蜥，附近水域亦發現稀有的軟珊瑚海筆。
+            </p>
+            <p class="text">
+              政府強推「明日大嶼」，在如此敏感的生態區域大興土木，必然破壞珍貴的海洋生態；它亦是全球最昂貴的基建，造價至少6,240億元，不但可能為香港庫房帶來沉重負擔，亦無法有效解決香港的房屋問題。
+            </p>
           </div>
-        </article>
-      </section>
-      <!-- Content -->
+          <div>
+            <p class="text">
+              事實上，香港有比「明日大嶼」更明智的選項：我們最新的調查發現，發展棕地造價僅333億元，比填海便宜8成，卻可興建近14萬伙公營房屋。
+            </p>
+            <p class="text">
+              海洋住屋不對立，為了珍貴脆弱的海洋生態，及讓市民安居樂業，一起發聲，要求政府優先發展棕地，放棄不負責任的「明日大嶼」！
+            </p>
+          </div>
+        </div>
+      </article>
+      <!-- Article 2 -->
+      <article class="hidden article bg-gray-100 relative">
+        <div
+          class="container mx-auto grid grid-flow-row grid-cols-1 lg:grid-cols-3 gap-4"
+        >
+          <div class="lg:col-start-1 lg:col-end-3">
+            <img
+              class="w-full"
+              src="https://api.greenpeace.org.hk/2019/elm/img/DJI_0431.c6b2b22f.jpg"
+              alt=""
+            />
+          </div>
+          <div class="self-end relative lg:col-start-3 lg:col-end-4">
+            <p class="text">
+              填海選址鄰近海域具生態價值，或令海洋或陸地物種的棲息地永久喪失。
+            </p>
+            <p class="text">
+              我們與6個環保及關注團體發佈的生態調查發現，鄰近填海選址的周公島，具國家二級保護野生動物白腹海鵰的鳥巢，全球獨有的鮑氏雙足蜥，更在中部水域錄得一種稀有的軟珊瑚海筆，生態價值絕不應被刻意低估。
+            </p>
+          </div>
+        </div>
+      </article>
     </main>
     <footer class="footer">
       <div class="container mx-auto">
