structing the css components

--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,11 @@
     <meta name="description" content="" />
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
-  <body class="body">
-    <!--[if IE]>
-      <p class="browserupgrade">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="https://browsehappy.com/">upgrade your browser</a> to improve
-        your experience and security.
-      </p>
-    <![endif]-->
-    <!-- Add your site or application content here -->
+  <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <header class="header">
       <div class="container mx-auto flex items-center justify-start">
         <img
-          class="logo"
+          class="logo bg-gray-100"
           src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-green-%5bweb%5d-01.png"
           alt="logo"
         />
@@ -41,15 +33,26 @@
             </div>
             <div class="headline px-4 py-4">
               <h1 class="text-4xl font-bold">Building a Visual Language</h1>
-              <p>Behind the scenes of our new design system</p>
-              <div class="my-8 border border-gray-200"></div>
-              <p>
+              <p class="text-gray-500 mt-2">Behind the scenes of our new design system</p>
+              <div class="line"></div>
+              <p class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
                 officiis magni autem laboriosam earum, adipisci itaque odio
                 ipsum nam, dignissimos repellat nesciunt sit cupiditate
                 molestiae odit ab, voluptate consequatur id.
               </p>
-              <p>
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                sit iste possimus dolorem illo, animi est enim, sint eos odio ab
+                eveniet id quasi deleniti ex excepturi deserunt voluptatibus
+                nemo.
+              </p>
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+                officiis magni autem laboriosam earum, adipisci itaque odio
+                ipsum nam, dignissimos repellat nesciunt sit cupiditate
+                molestiae odit ab, voluptate consequatur id.
+              </p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
                 sit iste possimus dolorem illo, animi est enim, sint eos odio ab
                 eveniet id quasi deleniti ex excepturi deserunt voluptatibus
