modify form field

--- a/src/index.html
+++ b/src/index.html
@@ -24,16 +24,44 @@
       <section class="min-h-screen relative">
         <div class="flex flex-wrap">
           <div class="w-full md:w-1/2 lg:w-2/3">
-            <div class="cover-image">
+            <div class="cover-image relative">
               <img
                 class="w-full"
                 src="https://peoplevsoil.org/zh-HK/assets/files/shared/slideshow/GP0STPBDA_PressMedia.jpg"
                 alt=""
               />
             </div>
-            <div class="headline px-4 py-4">
-              <h1 class="text-4xl font-bold">Building a Visual Language</h1>
-              <p class="text-gray-500 mt-2">Behind the scenes of our new design system</p>
+            <div class="headline p-8">
+              <div class="flex flex-wrap justify-between">
+                <div class="mb-4">
+                  <h1 class="text-4xl font-bold">Building a Visual Language<p class="text-base text-gray-700 mt-2">Behind the scenes of our new design system</p></h1>
+                </div>
+                <div class="md:hidden w-full flex flex-wrap justify-between items-center">
+                  <div class="participants mr-2">
+                    <ul class="text-gray-700 text-sm">
+                      <li><span class="font-bold">Chris Chan</span> has signed</li>
+                      <li><span class="font-bold">Chris Chan</span> has signed</li>
+                      <li><span class="font-bold">Chris Chan</span> has signed</li>
+                    </ul>
+                  </div>
+                  <div class="badge">
+                    <div class="badge-image-wrapper w-full h-full">
+                      <img
+                      class="mx-auto h-32 w-32 rounded-full object-cover"
+                      src="https://peoplevsoil.org/zh-HK/assets/files/shared/slideshow/GP0STPBDA_PressMedia.jpg"
+                      alt="badge"
+                    />
+                    <div class="absolute left-0 top-0 w-full h-full inset-y-auto circle-progress-bar">
+                      <svg class="w-full h-full fill-current text-transparent" viewBox="0 0 100 100">
+                        <circle cx="50" cy="50" r="46" fill="none" stroke="white" stroke-opacity="0.3" stroke-width="3"></circle>
+                        <circle cx="50" cy="50" r="46" fill="none" stroke="white" stroke-width="4" stroke-dasharray="200" stroke-dashoffset="30"></circle>
+                      </svg>
+                    </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
               <div class="line"></div>
               <p class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -41,12 +69,7 @@
                 ipsum nam, dignissimos repellat nesciunt sit cupiditate
                 molestiae odit ab, voluptate consequatur id.
               </p>
-              <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-                sit iste possimus dolorem illo, animi est enim, sint eos odio ab
-                eveniet id quasi deleniti ex excepturi deserunt voluptatibus
-                nemo.
-              </p>
+              <button class="md:hidden mt-3 mb-6 w-full shadow bg-gporange text-white text-center font-bold py-4 px-4 rounded">Sign the petition</button>
               <p class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
                 officiis magni autem laboriosam earum, adipisci itaque odio
@@ -103,49 +126,31 @@
                     placeholder="電郵地址 Email Address"
                   />
                 </div>
-                <div class="form-row">
-                  <label class="form-label">
-                    聯絡電話 Mobile Number
-                  </label>
-                  <div class="flex">
-                    <div class="w-1/5 pr-1">
-                      <div class="relative text-gray-500">
-                        <span
-                          class="pointer-events-none absolute pl-3 left-0 top-0 h-full items-center flex"
-                          >+</span
-                        >
-                        <input
-                          class="form-input pl-6"
+                <div class="form-row flex items-end">
+                    <div class="flex-none">
+                      <input
+                          class="w-16 form-input"
                           type="text"
                           placeholder="852"
                           value="852"
                         />
-                        <div
-                          class="invisible pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-                        >
-                          <svg
-                            class="fill-current h-4 w-4"
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 20 20"
-                          >
-                            <path
-                              d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                            />
-                          </svg>
-                        </div>
-                      </div>
                     </div>
-                    <div class="w-4/5 pl-1">
+                    <div class="flex-none mb-3">
+                      <span
+                          class="mx-2 text-gray-400 pointer-events-none"
+                          >-</span
+                        >
+                    </div>
+                    <div class="flex-1">
+                      <label class="form-label">
+                        聯絡電話 Mobile Number
+                      </label>
                       <input
                         class="form-input"
                         type="text"
                         placeholder="聯絡電話 Mobile Number"
                       />
-                      <p class="form-warning invisible">
-                        Validation Message here.
-                      </p>
                     </div>
-                  </div>
                 </div>
                 <div class="form-row">
                   <label class="form-label">
@@ -220,21 +225,20 @@
           </div>
         </article>
       </section>
-      <section class="bg-gray-400 section-hero relative min-h-screen">
+      <section class="py-12 bg-gray-400 section-hero relative">
         <!-- Hero -->
         <div class="hero-overlay absolute-full invisible"></div>
         <div class="hero-banner absolute-full invisible"></div>
         <!-- Hero -->
         <!-- Form -->
         <div
-          class="form-container container mx-auto self-center min-h-screen py-20 md:inset-auto md:px-4 sm:max-w-sm lg:max-w-md"
+          class="form-container container mx-auto self-center min-h-screen md:inset-auto md:px-4 sm:max-w-sm lg:max-w-md"
         >
           <div class="form-header">
             <h2>
               堅守香港海洋最後一道防線
             </h2>
-          </div>
-          <form class="form-body">
+          </div><form class="form-body">
             <div class="mb-8 form-row text-center">
               <h2 class="text-2xl font-bold">Make a change</h2>
               <p class="text-base">
@@ -275,49 +279,31 @@
                 placeholder="電郵地址 Email Address"
               />
             </div>
-            <div class="form-row">
-              <label class="form-label">
-                聯絡電話 Mobile Number
-              </label>
-              <div class="flex">
-                <div class="w-1/5 pr-1">
-                  <div class="relative text-gray-500">
-                    <span
-                      class="pointer-events-none absolute pl-3 left-0 top-0 h-full items-center flex"
-                      >+</span
-                    >
-                    <input
-                      class="form-input pl-6"
+            <div class="form-row flex items-end">
+                <div class="flex-none">
+                  <input
+                      class="w-16 form-input"
                       type="text"
                       placeholder="852"
                       value="852"
                     />
-                    <div
-                      class="invisible pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-                    >
-                      <svg
-                        class="fill-current h-4 w-4"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 20 20"
-                      >
-                        <path
-                          d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-                        />
-                      </svg>
-                    </div>
-                  </div>
                 </div>
-                <div class="w-4/5 pl-1">
+                <div class="flex-none mb-3">
+                  <span
+                      class="mx-2 text-gray-400 pointer-events-none"
+                      >-</span
+                    >
+                </div>
+                <div class="flex-1">
+                  <label class="form-label">
+                    聯絡電話 Mobile Number
+                  </label>
                   <input
                     class="form-input"
                     type="text"
                     placeholder="聯絡電話 Mobile Number"
                   />
-                  <p class="form-warning invisible">
-                    Validation Message here.
-                  </p>
                 </div>
-              </div>
             </div>
             <div class="form-row">
               <label class="form-label">
