init the preference page

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
+    <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+  <!-- Add your site or application content here -->
     <header class="header">
       <div class="container mx-auto flex items-center justify-start">
         <img
@@ -31,9 +35,9 @@
                 alt=""
               />
             </div>
-            <div class="headline p-8">
+            <div class="px-4">
               <div class="flex flex-wrap justify-between">
-                <div class="mb-4">
+                <div class="mt-8 mb-4">
                   <h1 class="text-4xl font-bold">Building a Visual Language<p class="text-base text-gray-700 mt-2">Behind the scenes of our new design system</p></h1>
                 </div>
                 <div class="md:hidden w-full flex flex-wrap justify-between items-center">
@@ -332,7 +336,7 @@
             </div>
             <div class="form-row">
               <label class="flex items-start">
-                <input class="mr-2 leading-tight" checked type="checkbox" />
+                <input checked type="checkbox" />
                 <span class="form-label">
                   <span class="block text-xs text-gray-600"
                     >我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<u>個人資料政策</u>與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span
