Added meta info

--- a/src/registration.html
+++ b/src/registration.html
@@ -1,18 +1,101 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html lang="zh" class="no-js">
   <head>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+    </script>
+    <style>
+      .async-hide {
+        opacity: 0 !important;
+      }
+    </style>
+    <script>
+      (function (a, s, y, n, c, h, i, d, e) {
+        s.className += ' ' + y;
+        h.end = i = function () {
+          s.className = s.className.replace(RegExp(' ?' + y), '');
+        };
+        (a[n] = a[n] || []).hide = h;
+        setTimeout(function () {
+          i();
+          h.end = null;
+        }, c);
+      })(window, document.documentElement, 'async-hide', 'dataLayer', 4000, {
+        'GTM-M6LZL75': true,
+      });
+    </script>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-M6LZL75');
+    </script>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>立即報名：「地球日環保紀錄片節」開幕紀錄片線上映後座談會</title>
-    <meta name="description" content="" />
+    <title>
+      「地球日環保紀錄片節」開幕紀錄片線上映後座談會 - Greenpeace 綠色和平 |
+      香港
+    </title>
+    <meta name="author" content="Greenpeace 綠色和平" />
+    <meta
+      name="description"
+      content="適逢4月22日是「世界地球日」50周年，綠色和平將舉辦「地球日環保紀錄片節」，嚴選五齣與氣候危機、環境破壞相關的紀錄片，並於地球日當日在綠色和平香港 Facebook 平台免費直播本地紀錄片《白海豚失樂園 Breathing Room》"
+    />
+    <meta
+      property="og:title"
+      content="「地球日環保紀錄片節」開幕紀錄片線上映後座談會 - Greenpeace 綠色和平 | 香港"
+    />
+    <meta property="og:site_name" content="Greenpeace 綠色和平" />
+    <meta
+      property="og:description"
+      content="適逢4月22日是「世界地球日」50周年，綠色和平將舉辦「地球日環保紀錄片節」，嚴選五齣與氣候危機、環境破壞相關的紀錄片，並於地球日當日在綠色和平香港 Facebook 平台免費直播本地紀錄片《白海豚失樂園 Breathing Room》"
+    />
+    <meta
+      property="og:image"
+      content="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/ecology-sharelink.jpg?v=1555578641000"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="192994240714848" />
+    <!-- meta tag-->
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000"
+    />
     <link rel="stylesheet" href="./styles/index.css" />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+    ></script>
   </head>
   <body
     class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen"
   >
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NBV2LPD"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden;"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!--[if IE]>
       <p class="browserupgrade">
         You are using an <strong>outdated</strong> browser. Please
@@ -63,13 +146,15 @@
                 >作開幕紀錄片；
               </p>
               <p class="text">
-                我們更有幸邀請到氣象學家、香港天文台前助理台長梁榮武先生、開幕紀錄片導演黃遂心，及香港年輕氣候行動者劉衍一
-                （Lance
-                Lau）出席線上映後座談會，與您即時對話，討論討論填海是否最合適的發展方案；保育與發展如何取得平衡。
+                <strong>
+                  我們更有幸邀請到氣象學家、香港天文台前助理台長梁榮武先生、開幕紀錄片導演黃遂心，及香港年輕氣候行動者劉衍一
+                  （Lance
+                  Lau）出席線上映後座談會，與您即時對話，討論討論填海是否最合適的發展方案；保育與發展如何取得平衡。</strong
+                >
               </p>
               <p class="text">
-                綠色和平「地球日環保紀錄片節」開幕紀錄片分享會及映後座談會 *
-                詳情：
+                綠色和平<strong>「地球日環保紀錄片節」</strong>開幕紀錄片分享會及映後座談會
+                * 詳情：
               </p>
               <div class="event-details my-8 bg-white">
                 <table class="table-auto">
@@ -81,8 +166,8 @@
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
-                        <strong>映後座談會平台：</strong>
-                        Google Hangouts Meet（網上登記後會獲得相關鏈結和密碼）
+                        <strong>映後座談會平台：</strong> Google Hangouts
+                        Meet（網上登記後會獲得相關鏈結）
                       </td>
                     </tr>
                     <tr class="">
@@ -90,7 +175,7 @@
                         <strong>嘉賓：</strong>
                         氣象學家、香港天文台前助理台長梁榮武先生；《白海豚失樂園
                         Breathing Room》導演黃遂心及香港年輕氣候行動者劉衍一
-                        (Lance Lau)
+                        (Lance Lau）
                       </td>
                     </tr>
                     <tr class="">
@@ -110,12 +195,12 @@
                 <div class="speaker">
                   <img
                     class="speaker__avatar"
-                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/20200416-earth-day-promotion.jpg"
+                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/e271d42d-daphne-wong-profile.jpg"
                     alt=""
                   />
                   <div class="px-6 py-4">
                     <h3>黃遂心 Daphne</h3>
-                    <span class="text-sm">紀錄片導演</span>
+                    <span class="text-sm text-gray-700">紀錄片導演</span>
                   </div>
                 </div>
                 <div class="speaker">
@@ -126,7 +211,7 @@
                   />
                   <div class="px-6 py-4">
                     <h3>梁榮武先生</h3>
-                    <span class="text-sm"
+                    <span class="text-sm text-gray-700"
                       >氣象學家<br />
                       香港天文台前助理台長
                     </span>
@@ -140,7 +225,9 @@
                   />
                   <div class="px-6 py-4">
                     <h3>劉衍一 Lance Lau</h3>
-                    <span class="text-sm">香港年輕氣候行動者</span>
+                    <span class="text-sm text-gray-700"
+                      >香港年輕氣候行動者</span
+                    >
                   </div>
                 </div>
               </div>
@@ -149,7 +236,7 @@
           <div class="w-full md:w-1/2 lg:w-1/3">
             <div class="sticky top-0 form-container self-center md:px-4">
               <div
-                class="px-4 py-8 border bg-white rounded-xl shadow-2xl overflow-hidden form-container"
+                class="px-4 py-8 border bg-white rounded shadow-md overflow-hidden form-container"
               >
                 <div class="text-center mb-6">
                   <p class="mb-2 text-sm">
@@ -312,7 +399,12 @@
                 </form>
                 <!-- end of EN form -->
               </div>
-              <div>
+              <div class="my-6">
+                <span class="mb-2 text-sm"
+                  >* By signing, you accept our Terms of Service and Privacy
+                  Policy. You can unsubscribe at any time.</span
+                >
+                <br /><br />
                 <span class="my-6 text-sm"
                   >*
                   映後座談會將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與嘉賓對談，請務必網上登記，以獲取
