remove npm & add smooth-scroll

--- a/src/registration.html
+++ b/src/registration.html
@@ -105,17 +105,22 @@
     <![endif]-->
     <!-- Add your site or application content here -->
     <header class="header header--green">
-      <div class="container mx-auto flex items-center justify-start">
-        <img
-          class="logo logo--green"
-          src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-green-%5bweb%5d-01.png"
-          alt="logo"
-        />
-        <img
-          class="logo logo--white"
-          src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-white-%5bweb%5d-01.png"
-          alt="logo"
-        />
+      <div class="container mx-auto flex items-center justify-between">
+        <div>
+          <img
+            class="logo logo--green"
+            src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-green-%5bweb%5d-01.png"
+            alt="logo"
+          />
+          <img
+            class="logo logo--white"
+            src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-white-%5bweb%5d-01.png"
+            alt="logo"
+          />
+        </div>
+        <div class="nav-button">
+          <button class="btn">立即登記</button>
+        </div>
       </div>
     </header>
     <main id="app" class="main">
@@ -234,7 +239,7 @@
             </div>
           </div>
           <div class="w-full md:w-1/2 lg:w-1/3">
-            <div class="sticky top-0 form-container self-center md:px-4">
+            <div class="sticky top-0 form-container self-center px-4">
               <div
                 class="px-4 py-8 border bg-white rounded shadow-md overflow-hidden form-container"
               >
