--- a/src/registration.html
+++ b/src/registration.html
@@ -119,7 +119,7 @@
           />
         </div>
         <div class="nav-button">
-          <button class="btn">立即登記</button>
+          <a class="btn" data-scroll href="#form-container">立即登記</a>
         </div>
       </div>
     </header>
@@ -138,8 +138,10 @@
               <div class="flex flex-wrap justify-between">
                 <div class="mt-8">
                   <h1 class="text-4xl font-bold">
-                    「地球日環保紀錄片節」
-                    <p class="text-2xl mt-2">開幕紀錄片線上映後座談會</p>
+                    地球日環保紀錄片節
+                    <p class="text-2xl mt-2 text-gray-700">
+                      開幕紀錄片線上映後座談會
+                    </p>
                   </h1>
                 </div>
               </div>
@@ -166,7 +168,7 @@
                   <tbody>
                     <tr>
                       <td class="border px-4 py-4">
-                        <strong>日期：</strong>2020年4月22日（世界地球日）
+                        <strong>日期：</strong> 2020年4月22日（世界地球日）
                       </td>
                     </tr>
                     <tr class="">
@@ -178,21 +180,26 @@
                     <tr class="">
                       <td class="border px-4 py-4">
                         <strong>嘉賓：</strong>
-                        氣象學家、香港天文台前助理台長梁榮武先生；《白海豚失樂園
+                        氣象學家、香港天文台前助理台長梁榮武；《白海豚失樂園
                         Breathing Room》導演黃遂心及香港年輕氣候行動者劉衍一
                         (Lance Lau）
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
-                        <strong>時間：</strong>晚上7:45時- 8:30時
+                        <strong>時間：</strong> 晚上7:45分 - 8:30分
                       </td>
                     </tr>
                   </tbody>
                 </table>
               </div>
               <p class="text mb-8">
-                立即報名參加「地球日環保紀錄片節」開幕紀錄片映後座談會與三位嘉賓即席對談，<strong
+                <a
+                  class="underline font-bold"
+                  data-scroll
+                  href="#form-container"
+                  >立即報名</a
+                >參加「地球日環保紀錄片節」開幕紀錄片映後座談會與三位嘉賓即席對談，<strong
                   >名額僅限250個!</strong
                 >
               </p>
@@ -215,7 +222,7 @@
                     alt=""
                   />
                   <div class="px-6 py-4">
-                    <h3>梁榮武先生</h3>
+                    <h3>梁榮武</h3>
                     <span class="text-sm text-gray-700"
                       >氣象學家<br />
                       香港天文台前助理台長
@@ -239,9 +246,10 @@
             </div>
           </div>
           <div class="w-full md:w-1/2 lg:w-1/3">
-            <div class="sticky top-0 form-container self-center px-4">
+            <div class="sticky top-0 self-center px-4 pb-8" style="top: 20px;">
               <div
                 class="px-4 py-8 border bg-white rounded shadow-md overflow-hidden form-container"
+                id="form-container"
               >
                 <div class="text-center mb-6">
                   <p class="mb-2 text-sm">
