before first send

--- a/email/registration-confirmation.html
+++ b/email/registration-confirmation.html
@@ -662,7 +662,7 @@
                       </strong>
                       <strong>
                         <a
-                          href="https://api.whatsapp.com/send?text=綠色和平「地球日環保紀錄片節」開幕紀錄片分享會及映後座談會！即刻報名 https://act.gp/2RJ06Od"
+                          href="https://api.whatsapp.com/send?text=綠色和平地球日環保紀錄片節開幕紀錄片分享會及映後座談會！即刻報名 https://act.gp/2RJ06Od"
                           style="
                             display: inline-block;
                             background: #25d366;
