--- a/src/registration.html
+++ b/src/registration.html
@@ -415,7 +415,12 @@
               <div class="my-6">
                 <span class="mb-2 text-sm"
                   >*
-                  我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照個人資料政策與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span
+                  我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<a
+                    class="underline"
+                    href="https://www.greenpeace.org/hongkong/policies/privacy-and-cookies/"
+                    target="_blank"
+                    >個人資料政策</a
+                  >與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span
                 >
                 <br /><br />
                 <span class="my-6 text-sm"
