--- a/email/registration-thankyou.html
+++ b/email/registration-thankyou.html
@@ -473,11 +473,11 @@
                         margin-top: 4px;
                         color: #333;
                       "
-                      >P.S. 此時此刻，綠色和平比以往更需要<a
+                      >P.S. 綠色和平不接受政府、企業捐款，此刻比以往更需要<a
                         href="https://act.gp/3ahyQNr"
                         target="_blank"
                         >您的支持</a
-                      >，以維持公正獨立，幫助團隊持續氣候工作！</span
+                      >，以不偏不倚地持續為環境奮鬥，帶來正面改變！</span
                     >
                   </td>
                 </tr>
