--- a/registration.html
+++ b/registration.html
@@ -50,7 +50,7 @@
     <!-- meta tag-->
     <link rel="shortcut icon" type="image/png" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
     <link rel="icon" type="image/png" sizes="96x96" href="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1853/gp-favicon.png?v=1550651064000">
-    <link rel="stylesheet" href="https://api.greenpeace.org.hk/2020/registration/styles.894ba382.css">
+    <link rel="stylesheet" href="https://api.greenpeace.org.hk/2020/registration/styles.028d4201.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
@@ -89,7 +89,7 @@
                   <h1 class="text-4xl font-bold">
                     地球日環保紀錄片節
                     <p class="text-2xl mt-2 text-gray-700">
-                      開幕紀錄片線上映後座談會
+                      開幕紀錄片線上放映暨映後座談會
                     </p>
                   </h1>
                 </div>
@@ -97,13 +97,13 @@
               <div class="line"></div>
               <p class="text">
                 適逢4月22日是「世界地球日」50周年，綠色和平將舉辦「地球日環保紀錄片節」，嚴選五齣與氣候危機、環境破壞相關的紀錄片，並於地球日當日在綠色和平香港
-                Facebook 平台免費直播本地紀錄片<strong>《白海豚失樂園 Breathing Room》</strong>作開幕紀錄片；
+                Facebook 平台免費直播本地紀錄片<strong>《白海豚失樂園 Breathing Room》</strong>作開幕紀錄片。
               </p>
               <p class="text">
                 <strong>
-                  我們更有幸邀請到氣象學家、香港天文台前助理台長梁榮武先生、開幕紀錄片導演黃遂心，及香港年輕氣候行動者劉衍一
+                  我們更有幸邀請到氣象學家、香港天文台前助理台長梁榮武、開幕紀錄片導演黃遂心及香港年輕氣候行動者劉衍一
                   （Lance
-                  Lau）出席線上映後座談會，與您即時對話，討論討論填海是否最合適的發展方案；保育與發展如何取得平衡。</strong>
+                  Lau）出席線上映後座談會，與您即時對話，討論填海對海洋生態的影響、保育與發展如何取得平衡。</strong>
               </p>
               <p class="text">
                 綠色和平<strong>「地球日環保紀錄片節」</strong>開幕紀錄片分享會及映後座談會
@@ -127,20 +127,20 @@
                       <td class="border px-4 py-4">
                         <strong>嘉賓：</strong>
                         氣象學家、香港天文台前助理台長梁榮武；《白海豚失樂園
-                        Breathing Room》導演黃遂心及香港年輕氣候行動者劉衍一
-                        (Lance Lau）
+                        Breathing
+                        Room》導演黃遂心及香港年輕氣候行動者劉衍一（Lance Lau）
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
-                        <strong>時間：</strong> 晚上7:45分 - 8:30分
+                        <strong>時間：</strong> 晚上7:45 - 8:30
                       </td>
                     </tr>
                   </tbody>
                 </table>
               </div>
               <p class="text mb-8">
-                <a class="underline font-bold" data-scroll="" href="#form-container">立即報名</a>參加「地球日環保紀錄片節」開幕紀錄片映後座談會與三位嘉賓即席對談，<strong>名額僅限250個!</strong>
+                <a class="underline font-bold" data-scroll="" href="#form-container">立即報名</a>參加「地球日環保紀錄片節」開幕紀錄片映後座談會，與三位嘉賓即席對談，<strong>名額僅限250個!</strong>
               </p>
               <div class="speakers">
                 <div class="speaker">
@@ -231,12 +231,13 @@
                   </div>
                 </form>
                 <!-- end of EN form -->
+                <div class="mt-4">
+                  <span class="text-sm">*
+                    登記是次活動即代表我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<a class="underline" href="https://www.greenpeace.org/hongkong/policies/privacy-and-cookies/" target="_blank">個人資料政策</a>與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span>
+                </div>
               </div>
-              <div class="my-6">
-                <span class="mb-2 text-sm">*
-                  我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<a class="underline" href="https://www.greenpeace.org/hongkong/policies/privacy-and-cookies/" target="_blank">個人資料政策</a>與我聯絡，包括提供環保工作資訊及捐款呼籲等。</span>
-                <br><br>
-                <span class="my-6 text-sm">*
+              <div class="my-8">
+                <span class="text-sm">*
                   映後座談會將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與嘉賓對談，請務必網上登記，以獲取
                   Google Hangouts Meet 鏈結。</span>
               </div>
