--- a/src/registration.html
+++ b/src/registration.html
@@ -411,7 +411,7 @@
                   </div>
                 </form>
                 <!-- end of EN form -->
-                <div class="mt-4">
+                <div class="form-footer mt-4">
                   <span class="text-sm"
                     >*
                     登記是次活動即代表我願意收到綠色和平發送的通訊，讓我能掌握環保工作的最新脈動！我同意綠色和平按照<a
