update the profile pic

--- a/src/registration.html
+++ b/src/registration.html
@@ -207,8 +207,8 @@
                 <div class="speaker">
                   <img
                     class="speaker__avatar"
-                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/e271d42d-daphne-wong-profile.jpg"
-                    alt=""
+                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/ce98c922-daphnewong.jpg"
+                    alt="黃遂心 Daphne"
                   />
                   <div class="px-6 py-4">
                     <h3>黃遂心 Daphne</h3>
@@ -218,8 +218,8 @@
                 <div class="speaker">
                   <img
                     class="speaker__avatar"
-                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/0a3d61a0-leung_pic.png"
-                    alt=""
+                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/90e7454b-leung_pic.jpg"
+                    alt="梁榮武"
                   />
                   <div class="px-6 py-4">
                     <h3>梁榮武</h3>
@@ -232,8 +232,8 @@
                 <div class="speaker">
                   <img
                     class="speaker__avatar"
-                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/98d6d0cc-lance02.png"
-                    alt=""
+                    src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/afd8cb67-lance02.jpg"
+                    alt="劉衍一 Lance Lau"
                   />
                   <div class="px-6 py-4">
                     <h3>劉衍一 Lance Lau</h3>
