--- a/email/registration-reminder.html
+++ b/email/registration-reminder.html
@@ -171,24 +171,24 @@
     <!-- end of template -->
     <!--  logo -->
     <table
-      class="mobile"
       align="center"
-      cellspacing="0"
-      cellpadding="0"
-      border="0"
-      width="600"
-      style="margin: 0 auto; background-color: rgb(255, 255, 255);"
       bgcolor="#ffffff"
+      border="0"
+      cellpadding="0"
+      cellspacing="0"
+      class="mobile"
+      style="margin: 0 auto; background-color: rgb(255, 255, 255);"
+      width="600"
     >
       <tbody>
         <tr>
           <td align="left" valign="top" width="100%">
             <table
-              style="background-color: rgb(255, 255, 255);"
               bgcolor="#ffffff"
               border="0"
               cellpadding="0"
               cellspacing="0"
+              style="background-color: rgb(255, 255, 255);"
               width="100%"
             >
               <tbody>
@@ -213,7 +213,9 @@
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" height="12" valign="top" width="100%"></td>
+                  <td align="left" height="12" valign="top" width="100%">
+                    &nbsp;
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -280,7 +282,7 @@
                   <td
                     align="left"
                     class="fullCenter"
-                    style="line-height: 16px;"
+                    style="line-height: 32px;"
                     valign="top"
                     width="100%"
                   >
@@ -288,19 +290,29 @@
                   </td>
                 </tr>
                 <tr>
-                  <td class="fullCenter" valign="top" width="100%">
+                  <td
+                    class="fullCenter"
+                    style="text-align: center;"
+                    valign="top"
+                    width="100%"
+                  >
                     <span
                       style="
                         font-family: 'Microsoft JhengHei', 'Heiti TC',
                           sans-serif;
-                        font-size: 14px;
+                        font-size: 20px;
+                        font-weight: bold;
                         line-height: 1.5;
                         letter-spacing: 1px;
                         margin-top: 3px;
                         color: #2b2b2b;
                       "
-                      >感謝您在抗疫同時，仍繼續<strong>與綠色和平一起關注氣候危機，出席「地球日環保紀錄片節」開幕紀錄片映後座談會</strong>，與三位嘉賓暢談環境議題！</span
-                    >
+                      >提提您- 您已報名參加的<br />
+                      <strong
+                        >綠色和平「地球日環保紀錄片節」開幕紀錄片映後座談會</strong
+                      ><br />
+                      將於一小時後開始
+                    </span>
                   </td>
                 </tr>
                 <tr>
@@ -337,32 +349,119 @@
                   </td>
                 </tr>
                 <tr>
+                  <td
+                    class="fullCenter"
+                    style="text-align: center;"
+                    valign="top"
+                    width="100%"
+                  >
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >這是您進入Google Hangouts Meet映後座談會的<a
+                        href="https://bit.ly/GPHKMeet"
+                        target="_blank"
+                        >個人鏈結</a
+                      >。<br />
+                      如欲邀請好友參加是次映後座談會，請分享<a
+                        href="https://act.greenpeace.org/page/59146/petition/1"
+                        target="_blank"
+                        >此訪客報名鏈結</a
+                      >。
+                    </span>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 16px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td class="fullCenter" valign="top" width="100%">
+                    <span
+                      style="
+                        font-family: 'Microsoft JhengHei', 'Heiti TC',
+                          sans-serif;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        letter-spacing: 1px;
+                        margin-top: 3px;
+                        color: #2b2b2b;
+                      "
+                      >為確保您的網絡安全及座談會順利舉行，請注意以下事項：<br />
+                      - 如欲以手機或平板電腦進入座談會，請先下載應用程式（<a
+                        href="https://apps.apple.com/us/app/hangouts-meet-by-google/id1013231476"
+                        >IOS</a
+                      >、<a
+                        href="https://play.google.com/store/apps/details?id=com.google.android.apps.meetings"
+                        >Android</a
+                      >）<br />
+                      - 進入Google Hangouts Meet前請先登入Gmail<br />
+                      - 請勿將映後座談會的個人鏈結直接公開，或傳給其他人
+                    </span>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 32px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    style="width: 90%; margin: 0 auto; padding: 0px;"
+                  >
+                    <img
+                      src="https://secured-static.greenpeace.org/hk/Global/hk/artworks/ebulletins/2019/01/email-line.png"
+                      style="width: 100%;"
+                    />
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    class="fullCenter"
+                    style="line-height: 16px;"
+                    valign="top"
+                    width="100%"
+                  >
+                    &nbsp;
+                  </td>
+                </tr>
+                <tr>
                   <td class="fullCenter" valign="top" width="100%">
                     <p style="text-align: center; width: 100%;">
-                      <span
-                        style="
-                          font-family: 'Microsoft JhengHei', 'Heiti TC',
-                            sans-serif;
-                          font-size: 14px;
-                          line-height: 1.5;
-                          letter-spacing: 1px;
-                          margin-top: 3px;
-                          color: #2b2b2b;
-                        "
-                        >綠色和平希望收集您的意見，<br />好讓我們在不久的將來能舉辦更多合您心意的活動。</span
-                      ><br />
-                      <br /><strong
+                      <strong
                         ><a
-                          href="https://act.gp/38WH4KJ"
+                          href="https://bit.ly/GPHKMeet"
                           style="
                             width: 50%;
                             display: inline-block;
                             background: #66cc00;
-                            padding: 12px 20px;
+                            padding: 8px 0px;
                             color: #ffffff;
                             font-family: 'Microsoft JhengHei', 'Heiti TC',
                               Helvetica, sans-serif;
-                            font-size: 16px;
+                            font-size: 15px;
                             font-weight: bold;
                             text-align: center;
                             letter-spacing: 0px;
@@ -370,7 +469,7 @@
                             border-radius: 2px;
                           "
                           target="_blank"
-                          >1分鐘填寫問卷</a
+                          >進入映後座談會</a
                         ></strong
                       >
                     </p>
@@ -381,111 +480,6 @@
                     align="left"
                     class="fullCenter"
                     style="line-height: 32px;"
-                    valign="top"
-                    width="100%"
-                  >
-                    &nbsp;
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    align="left"
-                    style="width: 90%; margin: 0 auto; padding: 0px;"
-                  >
-                    <img
-                      src="https://secured-static.greenpeace.org/hk/Global/hk/artworks/ebulletins/2019/01/email-line.png"
-                      style="width: 100%;"
-                    />
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    align="left"
-                    class="fullCenter"
-                    style="line-height: 16px;"
-                    valign="top"
-                    width="100%"
-                  >
-                    &nbsp;
-                  </td>
-                </tr>
-                <tr>
-                  <td class="fullCenter" valign="top" width="100%">
-                    <span
-                      style="
-                        font-family: 'Microsoft JhengHei', 'Heiti TC',
-                          sans-serif;
-                        font-size: 14px;
-                        line-height: 1.5;
-                        letter-spacing: 1px;
-                        margin-top: 3px;
-                        color: #2b2b2b;
-                      "
-                      >再次感謝您的參與，請支持我們繼續以行動為環境帶來正面改變！</span
-                    >
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    align="left"
-                    class="fullCenter"
-                    style="line-height: 16px;"
-                    valign="top"
-                    width="100%"
-                  >
-                    &nbsp;
-                  </td>
-                </tr>
-                <tr>
-                  <td class="fullCenter" valign="top" width="100%">
-                    <span
-                      style="
-                        font-family: 'Microsoft JhengHei', 'Heiti TC',
-                          sans-serif;
-                        font-size: 13px;
-                        line-height: 2em;
-                        margin-top: 4px;
-                        color: #333;
-                      "
-                      >綠色和平資深項目主任<br />楊凱珊</span
-                    >
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    align="left"
-                    class="fullCenter"
-                    style="line-height: 16px;"
-                    valign="top"
-                    width="100%"
-                  >
-                    &nbsp;
-                  </td>
-                </tr>
-                <tr>
-                  <td class="fullCenter" valign="top" width="100%">
-                    <span
-                      style="
-                        font-family: 'Microsoft JhengHei', 'Heiti TC',
-                          sans-serif;
-                        font-size: 13px;
-                        line-height: 2em;
-                        margin-top: 4px;
-                        color: #333;
-                      "
-                      >P.S. 綠色和平不接受政府、企業捐款，此刻比以往更需要<a
-                        href="https://act.gp/3ahyQNr"
-                        target="_blank"
-                        >您的支持</a
-                      >，以不偏不倚地持續為環境奮鬥，帶來正面改變！</span
-                    >
-                  </td>
-                </tr>
-                <tr>
-                  <td
-                    align="left"
-                    class="fullCenter"
-                    style="line-height: 16px;"
                     valign="top"
                     width="100%"
                   >
@@ -743,7 +737,7 @@
                             "
                           >
                             <span style="color: rgba(0, 0, 0, 0.65);"
-                              >Copyright &copy;2019 綠色和平</span
+                              >Copyright &copy;2020 綠色和平</span
                             ><br />
                             <span style="color: rgba(0, 0, 0, 0.65);"
                               >香港九龍新蒲崗太子道東698號寶光商業中心10樓</span
